--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/rafahcampos/api-bke-express#readme",
   "dependencies": {
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.0",
+    "@prisma/extension-accelerate": "^1.1.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
