--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "@prisma/extension-accelerate": "^1.1.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prisma": "^5.18.0"
