--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "node --env-file=.env --watch src/server.js",
-    "prisma:pull": "npx prisma db pull",
-    "prisma:generate": "npx prisma generate"
+    "prisma:local:pull": "npx prisma db pull --schema=./prisma/schema.local.prisma",
+    "prisma:local:push": "npx prisma db push --schema=./prisma/schema.local.prisma",
+    "prisma:local:generate": "npx prisma generate --schema=./prisma/schema.local.prisma",
+    "prisma:local:studio": "npx prisma studio --schema=./prisma/schema.local.prisma",
+    "prisma:pull": "npx prisma db pull --schema=./prisma/schema.production.prisma",
+    "prisma:push": "npx prisma db push --schema=./prisma/schema.production.prisma",
+    "prisma:generate": "npx prisma generate --schema=./prisma/schema.production.prisma"
   },
   "repository": {
     "type": "git",
@@ -29,6 +34,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
   },
